--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint:fix": "standard --fix"
   },
   "dependencies": {
-    "good": "^8.1.0",
+    "good": "7.3",
     "good-console": "^7.1.0",
     "good-squeeze": "^5.0.2",
-    "hapi": "^17.2.1",
+    "hapi": "16.6.3",
+    "hapi-io": "^0.2.1",
+    "hoek": "^5.0.3",
     "standard": "^11.0.0"
   }
 }
