--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "good-squeeze": "^5.0.2",
     "hapi": "16.6.3",
     "hapi-io": "^0.2.1",
+    "hapi-swagger": "7",
     "hoek": "^5.0.3",
-    "standard": "^11.0.0"
+    "inert": "4",
+    "standard": "^11.0.0",
+    "vision": "4"
   }
 }
